# OpenGL-Camera-Object-loader

./: CMakeLists.txt  README.md  object.cpp  object.h  project_2
docs/: ReadMe.txt
include/: camera.h  config.h  drawing_lib.h  font.h  gui.h  loader.h  object.h
src/: camera.cpp  drawing_lib.cpp  font.cpp  gui.cpp  loader.cpp  main.cpp  object.cpp
